Make component catalog Java 8 compatible